# uefi-app

./: .editorconfig  .gitignore  README.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: edk2.yml  rust.yml
edk2/CountDown/: CountDown.c  CountDown.inf
rust/: Cargo.toml
rust/count-down/: Cargo.toml
rust/count-down/src/: main.rs
rust/dhcp-option67/: Cargo.toml
rust/dhcp-option67/src/: main.rs
